--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             </div>
     <div class="nav">
          <h2 class="logo">LoGo</h2>
+         
         <ul>
             
             <li><a href="">Blazers</a></li>
             <li><a href="">Jeans</a></li>
-            <li><a href="">Jackets</a>
-            </li>
+            <li><a href="">Jackets <i class="fa fa-arrow-circle-down"></i></a></li>
             <li><a href="">Gymwear</a></li>
             <li><a href="">Blazers</a></li>
             <li><a href="">Shores</a></li>
@@ -37,6 +37,10 @@
       </div>
       <div class="subnav">
         <h3 class="jean">jean</h3>
+        <div class="hi">
+        <i class="fa fa-search" ></i>
+        <i class="fa fa-shopping-cart"></i>
+    </div>
     </div>
     <div class="content">
         <div class="text-content">
@@ -49,17 +53,17 @@
         <p class="section-sub-heading">8item</p>
         <div class="member-list">
             <div class="member-item">
-                <img src="jeans1.jpg" alt="" class="member-img">
+                <img src="jeans22.jpg" alt="" class="member-img">
                 <p class="member-name">Ripped Skinny Jeans</p>
                 <p class="member-namee">$24.99</p>
             </div>
             <div class="member-item">
-                <img src="jeans1.jpg" alt="" class="member-img">
+                <img src="jeans1 (1).jpg" alt="" class="member-img">
                 <p class="member-name">Ripped Skinny Jeans</p>
                 <p class="member-namee">$24.99</p>
             </div>
             <div class="member-item">
-                <img src="jeans1.jpg" alt="" class="member-img">
+                <img src="jeans22.jpg" alt="" class="member-img">
                 <p class="member-name">Ripped Skinny Jeans</p>
                 <p class="member-namee">$24.99</p>
             </div>
@@ -76,7 +80,7 @@
                 <p class="member-namee">$24.99</p>
             </div>
             <div class="member-item">
-                <img src="jeans1.jpg" alt="" class="member-img">
+                <img src="jeans22.jpg" alt="" class="member-img">
                 <p class="member-name">Ripped Skinny Jeans</p>
                 <p class="member-namee">$24.99</p>
             </div>
@@ -86,7 +90,7 @@
                 <p class="member-namee">$24.99</p>
             </div>
             <div class="member-item">
-                <img src="jeans1.jpg" alt="" class="member-img">
+                <img src="jeans22.jpg" alt="" class="member-img">
                 <p class="member-name">Ripped Skinny Jeans</p>
                 <p class="member-namee">$24.99</p>
             </div>
